<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.diseno.appsalud.Main3Activity">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="284dp"
        android:layout_height="80dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/appsalud_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/_titulo"
        android:textAppearance="@android:style/TextAppearance.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView2" />

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="247dp"
        android:layout_marginTop="160dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp">

        <TextView
            android:id="@+id/tituloNombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:text="@string/_fnombres"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNombres"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tituloNombres"
            android:layout_marginLeft="26dp"
            android:layout_marginStart="26dp"
            android:layout_toEndOf="@+id/tituloNombres"
            android:layout_toRightOf="@+id/tituloNombres"
            android:text="@string/_infonombres"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tituloApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tituloNombres"
            android:layout_alignStart="@+id/tituloNombres"
            android:layout_below="@+id/tituloNombres"
            android:layout_marginTop="23dp"
            android:text="@string/_fapellidos"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtApellidos"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tituloApellidos"
            android:layout_alignLeft="@+id/txtNombres"
            android:layout_alignStart="@+id/txtNombres"
            android:text="@string/_infoapellidos"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tituloCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tituloApellidos"
            android:layout_alignStart="@+id/tituloApellidos"
            android:layout_below="@+id/tituloApellidos"
            android:layout_marginTop="23dp"
            android:text="@string/_fcorreo"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtCorreo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/tituloCorreo"
            android:layout_alignLeft="@+id/txtApellidos"
            android:layout_alignStart="@+id/txtApellidos"
            android:text="@string/_infocorreo"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tituloGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tituloCorreo"
            android:layout_alignStart="@+id/tituloCorreo"
            android:layout_below="@+id/tituloCorreo"
            android:layout_marginTop="21dp"
            android:text="@string/_fgenero"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtGenero"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tituloGenero"
            android:layout_alignBottom="@+id/tituloGenero"
            android:layout_alignLeft="@+id/txtCorreo"
            android:layout_alignStart="@+id/txtCorreo"
            android:text="@string/_infogenero"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tituloNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/tituloGenero"
            android:layout_alignStart="@+id/tituloGenero"
            android:layout_below="@+id/tituloGenero"
            android:layout_marginTop="20dp"
            android:text="@string/_fnot"
            android:textAppearance="@android:style/TextAppearance.Holo.Medium"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/txtNot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/tituloNot"
            android:layout_alignBottom="@+id/tituloNot"
            android:layout_marginLeft="29dp"
            android:layout_marginStart="29dp"
            android:layout_toEndOf="@+id/tituloNot"
            android:layout_toRightOf="@+id/tituloNot"
            android:text="@string/_infonot"
            android:textSize="18sp" />

    </RelativeLayout>

    <Button
        android:id="@+id/btnSalir"
        android:layout_width="188dp"
        android:layout_height="45dp"
        android:layout_marginTop="280dp"
        android:text="@string/_salir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>
